# cardzzz

./: .gitignore  Cargo.toml  README.md  config.json  copy_assets.sh  generate_assets.sh  package.json
assets/: 1.json
candy-machine/: config.json  generate_assets.sh
next-app/: .gitignore  package.json
next-app/components/: BackendPool.js  DataTable.js  DataTable2.js  DataTableR.js  ListOffers.js  ListReimbursments.js  ShowNFTs.js  StakeCard.js  Tabs.js
next-app/pages/: DataTable.js  ListOffers.js  ShowNFTs.js  StakeCard.js  Tabs.js  index.js
next-app/styles/: Home.module.css
src/: constants.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: test.ts
ts-app/: package.json
ts-app/src/: App.tsx  Wallet.tsx  index.tsx
