[package]
name = "cardz"
version = "3.2.0"
description = "Solana Program Library Token"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []
serde-feature = ["serde", "serde_with"]

[dependencies]
num-derive = "0.3"
arrayref = "0.3.6"
num-traits = "0.2"
solana-program = "1.9.13"
mpl-token-vault = { version = "0.1.0", features = [ "no-entrypoint" ] }
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
thiserror = "1.0"
borsh = "0.9.2"
shank = { version = "~0.0.4" }
serde = { version = "1.0.136", optional = true }
serde_with = { version = "1.12.0", optional = true }

[dev-dependencies]
solana-sdk = "1.9.13"
solana-program-test = "1.9.13"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
