[package]
name = "cardz"
version = "3.2.0"
description = "Solana Program Library Token"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
solana-program = "1.14.4"
spl-token = { version = "3.5.0", features = [ "no-entrypoint" ] }
thiserror = "1.0.37"

[dev-dependencies]
solana-sdk = "1.14.4"
solana-program-test = "1.14.4"



[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
